4.00/Test/test11.c
// error: main with argumets not supported
int main(int x, int y){


  return 0;
}
